--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,5 @@
-.cf, .box-2{
+.cf,
+.box-2 {
     padding: 1rem;
     /* Attaches one drop-shadows to the box with color and angle. */
     box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
@@ -34,14 +35,15 @@
     margin-bottom: 1rem;
 }
 
-.box-1,.box-2{
+.box-1,
+.box-2 {
     margin-top: 3%;
     margin-bottom: 3%;
 }
 
 iframe {
     width: 100%;
-    
+
 }
 
 /****************************************************************************/
