Check code again

--- a/css/home.css
+++ b/css/home.css
@@ -49,9 +49,14 @@ h2 {
 }
 
 main img {
-    border-radius: 5rem;
+    border-radius: 2rem;
     margin: 1rem;
 
+}
+
+.a,
+.b {
+    width: 100%;
 }
 
 
