--- a/QRCode/style.css
+++ b/QRCode/style.css
@@ -1,85 +1,45 @@
-
-h1{
+* {
+  margin:0px;
+  padding:0px;
+  box-sizing:border-box;
+}
+body {
   font-family:sans-serif;
-  text-align: center;
 }
-
-.code{
-  font-size:2rem;
-  margin-top:1rem;
-  text-align:center;
-  diaplay:inline-block;
+.center {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:200px;
+  padding:20px;
+  background:#f5f5f5;
+  border-radius:10px;
 }
-
-.emoji{
-  font-size:5rem;
-  text-align:center;
+.form .form-element {
+  margin-bottom:15px;
 }
-
-p{
-  /* display: inline-block; */
-  padding:1rem;
-  border:1px solid;
+.form .form-element label {
+  font-size:14px;
+  color:#111;
 }
-  
-.flex{
-  display:grid;
-  grid-template-columns:repeat(auto-fill, 1fr);
-  align-items:center;
-  justify-content:center;
+.form .form-element input {
+  width:100%;
+  display:block;
+  padding:10px;
+  margin-top:5px;
 }
-
-/* .box{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-gap:1.5rem;
-} */
-p{
-  display:grid;
-  grid-template-columns: repeat(1,1fr);
-  align-items:center;
-  justify-content:center;
-  /* grid-gap:1.2rem; */
-  /* align-content: center;
-} */
- 
-
-
-  /* Set the screen size of tablet */
- @media only screen and (min-width: 1280px) {
-
-  p{
-  display:grid;
-  grid-template-columns: repeat(6,1fr);
-  align-items:center;
-  justify-content:center;
-  grid-gap:1rem;
-  align-content: center;
+.form .form-element button {
+  width:100%;
+  height:40px;
+  background:#111;
+  color:#eee;
+  font-size:14px;
+  border-radius:10px;
 }
- 
-  
-   /* .flex{
-      display:grid;
-      grid-template-columns:repeat(auto-fill,1fr);
-      grid-gap:1rem;
-      align-items:center;
-      justify-content:center;
-    } */
-} 
-
-/* Set the screen size of desttop */
-/* @media only screen and (min-width: 1280px) {
-  .box{
-    display:grid;
-    grid-template-columns:repeat(6,1fr);
-  }
-
-  .flex{
-    display:grid;
-    grid-template-columns:repeat(auto-fill,1fr);
-    grid-gap:1rem;
-    align-items:center;
-    justify-content:center;
-  }
-   
-} */
+.qr-img {
+  margin-top:10px;
+}
+.qr-img img {
+  width:100%;
+}
